--- a/stackgres-k8s/src/operator/pom.xml
+++ b/stackgres-k8s/src/operator/pom.xml
@@ -214,6 +214,7 @@
                     <goal>build</goal>
                 </goals>
                 <configuration>
+                  <containerNamePattern>%a</containerNamePattern>
                   <images>
                     <image>
                       <name>stackgres/it</name>
@@ -251,43 +252,19 @@
             <version>${docker-maven-plugin.version}</version>
             <executions>
               <execution>
-                <id>build-stackgres-it-container</id>
-                <phase>package</phase>
-                <goals>
-                    <goal>build</goal>
-                </goals>
-                <configuration>
-                  <images>
-                    <image>
-                      <name>stackgres/it</name>
-                      <build>
-                        <from>docker</from>
-                        <cleanup>try</cleanup>
-                        <optimise>true</optimise>
-                        <runCmds>
-                          <run>wget -q -O /bin/kubectl https://storage.googleapis.com/kubernetes-release/release/v1.12.10/bin/linux/amd64/kubectl</run>
-                          <run>chmod a+x /bin/kubectl</run>
-                          <run>wget -q -O /bin/kind  https://github.com/kubernetes-sigs/kind/releases/download/v0.5.1/kind-$(uname)-amd64</run>
-                          <run>chmod a+x /bin/kind</run>
-                          <run>wget -q https://get.helm.sh/helm-v2.14.3-linux-amd64.tar.gz -O -|tar xz --strip-components=1 -C /bin -f - linux-amd64/helm</run>
-                        </runCmds>
-                      </build>
-                    </image>
-                  </images>
-                </configuration>
-              </execution>
-              <execution>
                 <id>build-image</id>
                 <phase>package</phase>
                 <goals>
                   <goal>build</goal>
                   <goal>stop</goal>
                   <goal>start</goal>
+                  <goal>stop</goal>
                 </goals>
                 <configuration>
+                  <containerNamePattern>%a</containerNamePattern>
                   <images>
                     <image>
-                      <alias>image-builder</alias>
+                      <alias>ongres-jvm-builder</alias>
                       <name>ongres-jvm-builder</name>
                       <build>
                         <from>ongres/builder</from>
@@ -329,7 +306,6 @@
                             <volume>/var/run/docker.sock:/var/run/docker.sock</volume>
                           </bind>
                         </volumes>
-                        <autoRemove>true</autoRemove>
                       </run>
                     </image>
                   </images>
@@ -353,42 +329,19 @@
             <version>${docker-maven-plugin.version}</version>
             <executions>
               <execution>
-                <id>build-stackgres-it-container</id>
-                <phase>package</phase>
-                <goals>
-                    <goal>build</goal>
-                </goals>
-                <configuration>
-                  <images>
-                    <image>
-                      <name>stackgres/it</name>
-                      <build>
-                        <from>docker</from>
-                        <cleanup>try</cleanup>
-                        <optimise>true</optimise>
-                        <runCmds>
-                          <run>wget -q -O /bin/kubectl https://storage.googleapis.com/kubernetes-release/release/v1.12.10/bin/linux/amd64/kubectl</run>
-                          <run>chmod a+x /bin/kubectl</run>
-                          <run>wget -q -O /bin/kind  https://github.com/kubernetes-sigs/kind/releases/download/v0.5.1/kind-$(uname)-amd64</run>
-                          <run>chmod a+x /bin/kind</run>
-                          <run>wget -q https://get.helm.sh/helm-v2.14.3-linux-amd64.tar.gz -O -|tar xz --strip-components=1 -C /bin -f - linux-amd64/helm</run>
-                        </runCmds>
-                      </build>
-                    </image>
-                  </images>
-                </configuration>
-              </execution>
-              <execution>
                 <id>build-image</id>
                 <phase>package</phase>
                 <goals>
                   <goal>stop</goal>
                   <goal>build</goal>
                   <goal>start</goal>
+                  <goal>stop</goal>
                 </goals>
                 <configuration>
+                  <containerNamePattern>%a</containerNamePattern>
                   <images>
                     <image>
+                      <alias>ongres-native-builder</alias>
                       <name>ongres-native-builder</name>
                       <build>
                         <from>ongres/builder</from>
@@ -430,7 +383,6 @@
                             <volume>/var/run/docker.sock:/var/run/docker.sock</volume>
                           </bind>
                         </volumes>
-                        <autoRemove>true</autoRemove>
                       </run>
                     </image>
                   </images>
@@ -456,8 +408,10 @@
                 <goals>
                   <goal>stop</goal>
                   <goal>start</goal>
+                  <goal>stop</goal>
                 </goals>
                 <configuration>
+                  <containerNamePattern>%a</containerNamePattern>
                   <images>
                     <image>
                       <alias>kind-load</alias>
@@ -490,7 +444,6 @@
                             <volume>/var/lib/docker:/var/lib/docker:ro</volume>
                           </bind>
                         </volumes>
-                        <autoRemove>true</autoRemove>
                       </run>
                     </image>
                   </images>
@@ -516,8 +469,10 @@
                 <goals>
                   <goal>stop</goal>
                   <goal>start</goal>
+                  <goal>stop</goal>
                 </goals>
                 <configuration>
+                  <containerNamePattern>%a</containerNamePattern>
                   <images>
                     <image>
                       <alias>kind-load</alias>
@@ -550,7 +505,71 @@
                             <volume>/var/lib/docker:/var/lib/docker:ro</volume>
                           </bind>
                         </volumes>
-                        <autoRemove>true</autoRemove>
+                      </run>
+                    </image>
+                  </images>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
+      <id>reset-kind</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>io.fabric8</groupId>
+            <artifactId>docker-maven-plugin</artifactId>
+            <version>${docker-maven-plugin.version}</version>
+            <executions>
+              <execution>
+                <id>reset-kind</id>
+                <phase>pre-integration-test</phase>
+                <goals>
+                  <goal>stop</goal>
+                  <goal>start</goal>
+                  <goal>stop</goal>
+                </goals>
+                <configuration>
+                  <containerNamePattern>%a</containerNamePattern>
+                  <images>
+                    <image>
+                      <alias>reset-kind-${env.KIND_SUFFIX}</alias>
+                      <name>docker</name>
+                      <run>
+                        <entrypoint>
+                          <arg>/bin/sh</arg>
+                          <arg>-exc</arg>
+                          <arg>
+                          if [ ! -z "$KIND_SUFFIX" -a "$KIND_SUFFIX" != "none" ]
+                          then
+                            KIND_SUFFIX="-$KIND_SUFFIX"
+                          else
+                            KIND_SUFFIX=""
+                          fi
+                          docker rm -fv "kind$KIND_SUFFIX" || true
+                          </arg>
+                        </entrypoint>
+                        <wait>
+                          <time>300000</time>
+                          <exit>0</exit>
+                        </wait>
+                        <log>
+                          <prefix>reset-kind|</prefix>
+                          <date>default</date>
+                        </log>
+                        <env>
+                          <KIND_SUFFIX>${env.KIND_SUFFIX}</KIND_SUFFIX>
+                          <DOCKER_HOST>${env.DOCKER_HOST}</DOCKER_HOST>
+                        </env>
+                        <volumes>
+                          <bind>
+                            <volume>/var/run/docker.sock:/var/run/docker.sock</volume>
+                            <volume>/var/lib/docker:/var/lib/docker:ro</volume>
+                          </bind>
+                        </volumes>
                       </run>
                     </image>
                   </images>
