fix: Add admission request to the reflection-config file

--- a/stackgres-k8s/src/operator/reflection-config.json
+++ b/stackgres-k8s/src/operator/reflection-config.json
@@ -16,5 +16,14 @@
     "allPublicMethods" : true,
     "allDeclaredFields" : true,
     "allPublicFields" : true
+  },
+  {
+    "name" : "io.stackgres.operatorframework.AdmissionRequest",
+    "allDeclaredConstructors" : true,
+    "allPublicConstructors" : true,
+    "allDeclaredMethods" : true,
+    "allPublicMethods" : true,
+    "allDeclaredFields" : true,
+    "allPublicFields" : true
   }
 ]
