--- a/stackgres-k8s/src/operator/reflection-config.json
+++ b/stackgres-k8s/src/operator/reflection-config.json
@@ -25,5 +25,14 @@
     "allPublicMethods" : true,
     "allDeclaredFields" : true,
     "allPublicFields" : true
+  },
+  {
+    "name" : "io.stackgres.operatorframework.AdmissionResponse",
+    "allDeclaredConstructors" : true,
+    "allPublicConstructors" : true,
+    "allDeclaredMethods" : true,
+    "allPublicMethods" : true,
+    "allDeclaredFields" : true,
+    "allPublicFields" : true
   }
 ]
