--- a/stackgres-k8s/install/helm/stackgres-operator/templates/cluster-role.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/cluster-role.yaml
@@ -86,6 +86,9 @@ rules:
   - list
   - get
   - create
+  - delete
+  - update
+  - patch
 - apiGroups: ["monitoring.coreos.com"]
   resources:
   - prometheus
