ci: enable retry of normal integration tests

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -122,6 +122,7 @@ integration test:
     - stackgres-runner
   dependencies:
     - compile
+  retry: 2
   script:
     - 'flock -w 3600 /tmp/stackgres-integration-test mvn $MAVEN_CLI_OPTS verify -P integration'
 
