fix: nginx port and redirection to index.html

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/nginx-configmap.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/nginx-configmap.yaml
@@ -19,8 +19,8 @@ data:
         }
         {{ end }}
         
-        location ~ ^(/|/stackgres)$ {
-            return 302 "$scheme://$http_host/stackgres/";
+        location ~ ^(/|/stackgres|/stackgres/)$ {
+            return 302 "$scheme://$http_host/stackgres/index.html";
         }
         
         location ~ ^/stackgres {
