feat: Implement backups

--- a/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
@@ -26,10 +26,42 @@ cluster:
     compressionMethod: lz4
     uploadDiskConcurrency: 1
     tarSizeThreshold: 1073741823
+    #networkRateLimit:
+    #diskRateLimit:
+    #pgpConfiguration:
+    #  name: pgpConfiguration
+    #  key: key
     s3: {}
+    #  prefix: s3://stackgres
+    #  accessKey:
+    #    name: minio
+    #    key: accesskey
+    #  secretKey:
+    #    name: minio
+    #    key: secretkey
+    #  region: k8s
+    #  endpoint: minio.stackgres.svc
+    #  forcePathStyle: true
+    #  storageClass:
+    #  sse:
+    #  sseKmsId:
+    #  cseKmsId:
+    #  cseKmsRegion:
     gcs: {}
+    #  prefix: gcs://stackgres
+    #  serviceAccountJsonKey:
+    #    name: gcs
+    #    key: key
     azureblob: {}
-
+    #  prefix: azure://stackgres
+    #  account:
+    #    name: azureblob
+    #    key: account
+    #  accessKey:
+    #    name: azureblob
+    #    key: accesskey
+    #  bufferSize:
+    #  maxBuffers:
 sidecar:
   pooling: true
   util: true
