adding envoy default configuration yaml to the native image class path

--- a/stackgres-k8s/src/operator/pom.xml
+++ b/stackgres-k8s/src/operator/pom.xml
@@ -145,6 +145,7 @@
                   <enableHttpUrlHandler>true</enableHttpUrlHandler>
                   <additionalBuildArgs>
                     <additionalBuildArg>-H:IncludeResources=.*/banner.txt</additionalBuildArg>
+                    <additionalBuildArg>-H:IncludeResources=.*/*.yaml</additionalBuildArg>
                   </additionalBuildArgs>
                   <enableReports>false</enableReports>
                 </configuration>
