--- a/stackgres-k8s/src/operator/src/main/resources/envoy/default_envoy.yaml
+++ b/stackgres-k8s/src/operator/src/main/resources/envoy/default_envoy.yaml
@@ -5,42 +5,42 @@ static_resources:
       address:
         socket_address:
           address: 0.0.0.0
-          port_value: 5432
+          port_value: postgres_entry_port
       filter_chains:
         - filters:
             - name: envoy.tcp_proxy
               typed_config:
                 "@type": type.googleapis.com/envoy.config.filter.network.tcp_proxy.v2.TcpProxy
                 stat_prefix: ingress_tcp
-                cluster: postgres_pool_cluster
-    - name: postgres_replication_listener
+                cluster: postgres_cluster
+    - name: postgres_raw_listener
       per_connection_buffer_limit_bytes: 32768  # 32 KiB
       address:
         socket_address:
           address: 0.0.0.0
-          port_value: 5433
+          port_value: postgres_raw_entry_port
       filter_chains:
         - filters:
             - name: envoy.tcp_proxy
               typed_config:
                 "@type": type.googleapis.com/envoy.config.filter.network.tcp_proxy.v2.TcpProxy
                 stat_prefix: ingress_tcp
-                cluster: postgres_replication_cluster
+                cluster: postgres_raw_cluster
   clusters:
-    - name: postgres_replication_cluster
+    - name: postgres_cluster
       connect_timeout: 1s
       per_connection_buffer_limit_bytes: 32768 # 32 KiB
       hosts:
         socket_address:
           address: 127.0.0.1
-          port_value: 5434
-    - name: postgres_pool_cluster
+          port_value: postgres_port
+    - name: postgres_raw_cluster
       connect_timeout: 1s
       per_connection_buffer_limit_bytes: 32768 # 32 KiB
       hosts:
         socket_address:
           address: 127.0.0.1
-          port_value: 5435
+          port_value: postgres_raw_port
 admin:
   access_log_path: "/dev/null"
   address:
