--- a/stackgres-k8s/src/operator/src/main/resources/envoy/envoy_nopgbouncer.yaml
+++ b/stackgres-k8s/src/operator/src/main/resources/envoy/envoy_nopgbouncer.yaml
@@ -5,7 +5,7 @@ static_resources:
       address:
         socket_address:
           address: 0.0.0.0
-          port_value: 5432
+          port_value: postgres_entry_port
       filter_chains:
         - filters:
             - name: envoy.tcp_proxy
@@ -13,12 +13,12 @@ static_resources:
                 "@type": type.googleapis.com/envoy.config.filter.network.tcp_proxy.v2.TcpProxy
                 stat_prefix: ingress_tcp
                 cluster: postgres_cluster
-    - name: postgres_replication_listener
+    - name: postgres_raw_listener
       per_connection_buffer_limit_bytes: 32768  # 32 KiB
       address:
         socket_address:
           address: 0.0.0.0
-          port_value: 5433
+          port_value: postgres_raw_entry_port
       filter_chains:
         - filters:
             - name: envoy.tcp_proxy
@@ -33,7 +33,7 @@ static_resources:
       hosts:
         socket_address:
           address: 127.0.0.1
-          port_value: 5434
+          port_value: postgres_raw_port
 admin:
   access_log_path: "/dev/null"
   address:
