fix: typo in removed operator secret

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/init-job.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/init-job.yaml
@@ -24,7 +24,7 @@ spec:
           - "-ecx"
           - |
             kubectl delete csr --ignore-not-found {{ .Release.Name }}
-            kubectl delete secret --ignore-not-found {{ .Release.Name }}-init
+            kubectl delete secret --ignore-not-found {{ .Release.Name }}
             kubectl delete validatingwebhookconfiguration --ignore-not-found {{ .Release.Name }}-sgcluster
             kubectl delete validatingwebhookconfiguration --ignore-not-found {{ .Release.Name }}-sgpgconfig
             kubectl delete validatingwebhookconfiguration --ignore-not-found {{ .Release.Name }}-sgpgbouncer
